refatorando atualiza consulta e hendle erros